test/sema/traits/trait_function_implemented_multiple_times.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  fn foo() {}
}

struct S {
  impl A {
    fn foo() {}

    // CHECK: [[# @LINE + 1]]:8: error: function 'foo' is already implemented for trait 'A'
    fn foo() {}

    // CHECK: [[# @LINE + 1]]:8: error: function 'foo' is already implemented for trait 'A'
    fn foo() {}
  }
}

fn main() {}
